# quartett-prototype

./: .gitignore  LICENSE  Makefile  meson.build
data/: thinkpad.cards
include/: config.h  hashtable.h  linked.h  parser.h  tokens.h  util.h
scripts/: build.sh  meson_wildcard.sh
src/: hashtable.c  linked.c  main.c  parser.c  tokens.c  util.c
